rename icon classes to correct BEM convention, replace custom scss with solid spacing variables

--- a/_lib/solid-components/_messaging.scss
+++ b/_lib/solid-components/_messaging.scss
@@ -4,7 +4,7 @@
 
 .page-message {
   position: relative;
-  margin-top: .125rem;
+  margin-top: $space-05;
   padding: .8rem;
   font-size: $text-4;
   font-weight: $bold;
@@ -16,22 +16,22 @@
 
 .page-message__close {
   position: absolute;
-  right: .25rem;
+  right: $space-05;
   top: .375rem;
-  padding: .5rem;
+  padding: $space-1;
   cursor: pointer;
 }
 
-.page-message__icon--alert{
+.page-message__icon-alert{
   vertical-align: middle;
-  height: 1rem;
+  height: $space-2;
   border-radius: 50%;
   margin-bottom: .15rem;
-  margin-right: .25rem;
+  margin-right: $space-05;
 }
 
-.page-message__icon--close {
-  width: 1.25rem;
+.page-message__icon-close {
+  width: $space-3;
 }
 
 .page-message--error {
@@ -43,15 +43,15 @@
     color: $text-red;
   }
 
-  .page-message__icon--close {
+  .page-message__icon-close {
     fill: darken($fill-red-lighter, 20%);
   }
 
-  & .page-message__close:hover .page-message__icon--close {
+  & .page-message__close:hover .page-message__icon-close {
     fill: $fill-red;
   }
 
-  .page-message__icon--alert {
+  .page-message__icon-alert {
   fill: $fill-red-lighter;
   background-color: $fill-red;
   }
@@ -67,15 +67,15 @@
     color: $text-green;
   }
 
-  .page-message__icon--close {
+  .page-message__icon-close {
     fill: darken($fill-green-lighter, 20%);
   }
 
-  & .page-message__close:hover .page-message__icon--close {
+  & .page-message__close:hover .page-message__icon-close {
     fill: $fill-green;
   }
 
-  .page-message__icon--alert {
+  .page-message__icon-alert {
   fill: $fill-green-lighter;
   background-color: $fill-green;
   }
@@ -91,14 +91,14 @@
     color: $text-orange;
   }
 
-    .page-message__icon--close {
+    .page-message__icon-close {
     fill: lighten($fill-orange, 20%)
     }
 
-    & .page-message__close:hover .page-message__icon--close {
+    & .page-message__close:hover .page-message__icon-close {
       fill: $fill-orange;
     }
-  .page-message__icon--alert {
+  .page-message__icon-alert {
   fill: lighten($fill-orange, 40%);
   background-color: $fill-orange;
   
